05-players/player10/solution_pour_NP/04-networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: player01-microseg
  namespace: ns-player01
spec:
  podSelector:
    matchLabels:
      app: player01
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: monitoring
      namespaceSelector: 
        matchLabels:
          'kubernetes.io/metadata.name': default
    - namespaceSelector:
         matchLabels:
          app: players
